# gtd-mcp-rs

./: .gitignore  BRANCH_PROTECTION.md  CI_SUMMARY.md  Cargo.toml  FEATURES_JA.md  GTD_ASSESSMENT.md  IMPLEMENTATION.md  MCP_PROTOCOL_TEST_RESULTS.md  README.ja-jp.md  README.md  RELEASE.md  RELEASE_0.3.0.md  RELEASE_0.4.0.md  test_git_managed
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
.kiro/steering/: mcp-tools.md  product.md  structure.md  tech.md
doc/: BRANCH_PROTECTION.md  CI_SUMMARY.md  ERROR_HANDLING.md  GTD_ASSESSMENT.md  IMPLEMENTATION.md  ISSUE_188_INVESTIGATION.md  MCP_TOOLS.md  RELEASE_0.2.0.md  RELEASE_0.3.2.md  RELEASE_0.5.0.md  TRASH_FIX_SUMMARY.md
src/: formatting.rs  git_ops.rs  gtd.rs  lib.rs  lib.rs.before_test_migration  lib.rs.failed  lib.rs.reorganized  main.rs  migration.rs  storage.rs  validation.rs
src/gtd/: gtd_data.rs  mod.rs  nota.rs  queries.rs  serde_impl.rs
src/handlers/: change_status.rs  empty_trash.rs  inbox.rs  list.rs  mod.rs  update.rs
src/migration/: conversions.rs  legacy_types.rs  migrate.rs  mod.rs  normalize.rs
tests/: basic_tests.rs  change_status_tests.rs  git_ops_test.rs  gtd_data_test.rs  gtd_unit_tests.rs  inbox_tests.rs  integration_context_tests.rs  integration_test.rs  integration_tests.rs  migration_test.rs  storage_test.rs
tests/common/: mod.rs
tests/integration/: basic_tests.rs  common.rs  mod.rs
