[package]
name = "gtd-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-attr = "0.0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
