[package]
name = "gtd-mcp"
version = "0.3.0"
edition = "2024"

[dependencies]
mcp-attr = "0.0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
