[package]
name = "gtd-mcp"
version = "0.6.0"
edition = "2024"
description = "A Model Context Protocol (MCP) server for GTD (Getting Things Done) task management"
license = "MIT"
repository = "https://github.com/ekicyou/gtd-mcp-rs"
documentation = "https://docs.rs/gtd-mcp"
keywords = ["mcp", "gtd", "task-management", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "gtd_mcp"
path = "src/lib.rs"

[[bin]]
name = "gtd-mcp"
path = "src/main.rs"

[dependencies]
mcp-attr = "~0.0.7"
tokio = { version = "~1", features = ["full"] }
serde = { version = "~1", features = ["derive"] }
toml = "~0.9"
anyhow = "~1"
chrono = { version = "~0.4", features = ["serde"] }
git2 = "~0.20"
clap = { version = "~4", features = ["derive"] }

[dev-dependencies]
tempfile = "~3"
